--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ханойская башня</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ханойская башня - Рекурсивное и итеративное решение на C</title>
+    <meta name="description" content="Подробное объяснение рекурсивного и итеративного решения задачи Ханойской башни с кодом на языке C. Алгоритмы, объяснение, примеры.">
+    <meta name="keywords" content="ханойская башня, рекурсия, итеративный метод, C programming, алгоритмы, программирование">
+    <meta name="author" content="Муфахаров Артур, Капаев Семён">
   </head>
   <body>
     <div id="root"></div>
